--- a/styles.css
+++ b/styles.css
@@ -476,8 +476,10 @@ a:focus {
         width: 100%;
         min-height: 100vh;
         height: auto;
-        padding: 0;
+        padding: 0 0 0 0;
         margin: 0;
+        display: block;
+        position: relative;
     }
 
     .logo {
@@ -502,7 +504,7 @@ a:focus {
         top: 70px;
         left: 20px;
         right: 20px;
-        width: calc(100% - 40px);
+        width: auto;
     }
 
     .title-redmoon {
@@ -561,34 +563,40 @@ a:focus {
         top: 0;
         width: 100%;
         height: auto;
+        margin-bottom: 30px;
     }
 
     .connect-button-bg {
-        position: absolute;
+        position: relative;
         left: 0;
-        top: 150px;
+        top: 0;
         width: 180px;
         height: 50px;
+        margin-bottom: -50px;
     }
 
     .connect-button-text {
-        position: absolute;
+        position: relative;
         left: 0;
-        top: 160px;
+        top: 0;
         width: 180px;
-        height: auto;
+        height: 50px;
         font-size: 28px;
-        line-height: 28px;
+        line-height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .footer-bg {
-        position: absolute;
+        position: relative;
         left: 0;
         right: 0;
-        top: 680px;
+        top: auto;
         width: 100%;
         height: auto;
         padding: 30px 20px;
+        margin-top: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
